--- a/ihm.ui
+++ b/ihm.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>812</width>
-    <height>717</height>
+    <height>728</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,6 +38,9 @@
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
+      <property name="childrenCollapsible">
+       <bool>false</bool>
+      </property>
       <widget class="QWidget" name="verticalLayoutWidget_2">
        <layout class="QVBoxLayout" name="verticalLayout_7">
         <property name="topMargin">
@@ -56,6 +59,21 @@
             <width>0</width>
             <height>200</height>
            </size>
+          </property>
+          <property name="dragEnabled">
+           <bool>true</bool>
+          </property>
+          <property name="dragDropOverwriteMode">
+           <bool>true</bool>
+          </property>
+          <property name="dragDropMode">
+           <enum>QAbstractItemView::DropOnly</enum>
+          </property>
+          <property name="defaultDropAction">
+           <enum>Qt::CopyAction</enum>
+          </property>
+          <property name="alternatingRowColors">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -260,14 +278,14 @@
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="action_propos"/>
+    <addaction name="actionAbout"/>
    </widget>
    <widget class="QMenu" name="menuFichier">
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionImport_a_file"/>
-    <addaction name="actionImport_a_directory"/>
+    <addaction name="actionImportAFile"/>
+    <addaction name="actionImportADirectory"/>
     <addaction name="separator"/>
     <addaction name="actionQuit"/>
    </widget>
@@ -275,7 +293,7 @@
     <property name="title">
      <string>Edition</string>
     </property>
-    <addaction name="actionEttings"/>
+    <addaction name="actionSettings"/>
    </widget>
    <addaction name="menuFichier"/>
    <addaction name="menuEdition"/>
@@ -295,44 +313,28 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="actionAjouter_Des_Fichiers"/>
-   <addaction name="actionAjouter_un_dossier"/>
+   <addaction name="actionAddFiles"/>
+   <addaction name="actionAddDirectory"/>
    <addaction name="separator"/>
-   <addaction name="actionLaunch_rename_assistant"/>
-   <addaction name="actionLaunch_from_selection"/>
+   <addaction name="actionLaunchRenameAssistant"/>
+   <addaction name="actionLaunchFromSelection"/>
    <addaction name="separator"/>
-   <addaction name="actionEnregistrer"/>
+   <addaction name="actionSave"/>
   </widget>
-  <action name="actionAjouter_Des_Fichiers">
-   <property name="text">
-    <string>Add files</string>
-   </property>
-   <property name="toolTip">
-    <string>Ajouter des fichiers</string>
-   </property>
-  </action>
-  <action name="actionAjouter_un_dossier">
+  <action name="actionAddDirectory">
    <property name="text">
     <string>Add directory</string>
    </property>
   </action>
-  <action name="actionSoumettre_les_hashs">
+  <action name="actionSave">
    <property name="enabled">
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Submit hashes</string>
+    <string>Save All</string>
    </property>
   </action>
-  <action name="actionEnregistrer">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>Save</string>
-   </property>
-  </action>
-  <action name="actionLaunch_rename_assistant">
+  <action name="actionLaunchRenameAssistant">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -351,37 +353,37 @@
     <enum>QAction::QuitRole</enum>
    </property>
   </action>
-  <action name="action_propos">
+  <action name="actionAbout">
    <property name="text">
     <string>About</string>
    </property>
   </action>
-  <action name="actionCompute_hashes">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>Compute hashes</string>
-   </property>
-  </action>
-  <action name="actionLaunch_from_selection">
+  <action name="actionLaunchFromSelection">
    <property name="text">
     <string>Rename assistant from current selection</string>
    </property>
   </action>
-  <action name="actionEttings">
+  <action name="actionSettings">
    <property name="text">
     <string>Settings</string>
    </property>
   </action>
-  <action name="actionImport_a_file">
+  <action name="actionImportAFile">
    <property name="text">
     <string>Import a file</string>
    </property>
   </action>
-  <action name="actionImport_a_directory">
+  <action name="actionImportADirectory">
    <property name="text">
     <string>Import a directory</string>
+   </property>
+  </action>
+  <action name="actionAddFiles">
+   <property name="text">
+    <string>Add Files</string>
+   </property>
+   <property name="toolTip">
+    <string>Add Files</string>
    </property>
   </action>
  </widget>
